--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "craco start",
-    "build": "craco build",
+    "build": "CI=false craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "clean-files": "rm -rf ./template/public ./template/src",
@@ -41,16 +41,16 @@
   "devDependencies": {
     "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "autoprefixer": "9",
-    "postcss": "7",
+    "autoprefixer": "10.3.3",
+    "postcss": "8.3.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
