added login and logout functionality implementation

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -11,6 +11,10 @@
       {
           "route": "/login",
           "rewrite": "/.auth/login/twitter"
+      },
+      {
+          "route": "/logout",
+          "rewrite": "/.auth/logout"
       }
   ]
 }
